--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 Django==4.0.1
 django-environ==0.8.1
+django-extensions==3.1.5
 google-api-core==2.7.1
 google-auth==2.6.2
 google-cloud-secret-manager==2.9.2
@@ -13,6 +14,7 @@ grpcio==1.44.0
 grpcio-status==1.44.0
 gunicorn==20.1.0
 idna==3.3
+Pillow==9.0.1
 proto-plus==1.20.3
 protobuf==3.19.4
 psycopg2-binary==2.9.3
